# web3-solana-anchor

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
app/src/: App.tsx  index.scss  main.tsx  reset.scss
app/src/components/app-wallet-provider/: app-wallet-provider.tsx
app/src/components/connect-wallet-button/: connect-wallet-button.tsx
app/src/components/mint-nft-section/: mint-nft-section.module.scss  mint-nft-section.tsx
app/src/components/token-claim-section/: token-claim-section.module.scss  token-claim-section.tsx
app/src/lib/: anchor-client.ts  connection.ts  constants.ts
app/src/types/: staking-lock-period.enum.ts  staking.ts
app/src/utils/: lock-period-format.ts  reward-calc.ts  time-format.ts  token-amount-format.ts
programs/airdrop/: Cargo.toml
programs/airdrop/src/: constants.rs  error.rs  lib.rs
programs/nft_airdrop/: Cargo.toml
programs/nft_airdrop/src/: errors.rs  lib.rs
programs/spl_token_staking/: Cargo.toml
programs/spl_token_staking/src/: errors.rs  lib.rs
programs/spl_token_staking/src/context/: claim_reward.rs  close_stake_state.rs  initialize_stake_state.rs  mod.rs  stake.rs  unstake.rs
programs/spl_token_staking/src/scripts/: close-staking.ts  fund-reward-vault-pda.ts  initialize-staking.ts
programs/spl_token_staking/src/state/: mod.rs  stake_state.rs  user_stake_account.rs
tests/: airdrop.ts  nft_airdrop.ts  spl_token_staking.ts
(+62 files in other folders)
